--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
             </div>
             <div class="col col-sm order-sm-first col-md">
                 <div class="media">
-                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/Uthappizza.png" alt="uthapizza">
+                    <img class="d-flex mr-3 img-thumbnail align-self-center" src="img/uthappizza.png" alt="uthapizza">
                 <div class="media-body">
                     <h2 class="mt-0">Uthappizza</h2><span class="badge badge-danger">HOT</span> <span class="badge badge-pill badge-secondary">$9.99</span>
                     <p>A unique combination of Indian Uthappam (pancake) and Italian pizza, topped with Cerignola olives, ripe vine cherry tomatoes, Vidalia onion, Guntur chillies and Buffalo Paneer.</p>
